bugfix css : overflow table working

--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,5 +1,5 @@
 .table_container {
-    max-width: 750px;
+    max-width: 100vw;
     /* max-height: 500px; */
     margin: 0 auto;
     overflow: auto;
@@ -57,3 +57,7 @@
   .table tbody tr:nth-child(2n) td {
     background: #fff;
   }
+
+tbody {
+    height: 100vh
+}
