--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
 
 html{
   height: 100%;
-  overflow: hidden;
   font-size: 62.5%;
 }
 
@@ -23,7 +22,6 @@ html{
 
 body{
   height: 100%;
-  overflow: hidden;
   font-size: 1.6rem;
 }
 
